# ZPR

./: .gitignore  CMakeLists.txt  Crossover.h  Crossovers.h  Environment.h  Exception.h  Fitness.h  GA.h  GAUtility.h  Member.h  Miscellaneous.h  Mutation.h  Mutations.h  Predefined.h  README  Selection.h  Selections.h  Specimen.h  Test1.h  Test2.h  Test3.h  crossover.hpp  environment.hpp  exception.hpp  ga.hpp  main.cpp  mutation.hpp  selection.hpp  specimen.hpp  test.cpp
MatchStringWithCoding/: Include.hpp  include.hpp  main.cpp
MatchStringWithPairsOfSpecimen/: Include.hpp  include.hpp  main.cpp
Predefined/: Crossovers.h  Selections.h  crossovers.hpp  ga_utility.hpp  mutations.hpp  selections.hpp
TravelingSalesmanExample/: Include.hpp  ga_utility.hpp  include.hpp  main.cpp
